--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-ui": "^0.20.2",
     "moment": "^2.29.3",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
