--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router": "^6.3.0",
