--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "material-ui": "^0.20.2",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
+    "node-fetch": "^2.6.7",
+    "nth-check": "^2.0.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-csv": "^2.2.2",
