--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "material-ui": "^0.20.2",
     "moment": "^2.29.4",
     "node-fetch": "^2.6.7",
